2003-09-23  Ettore Perazzoli  <ettore@ximian.com>

	* editor-control-factory.c (send_event_str): Work around the fact
	that bonobo_arg_from_gvalue() in libbonobo 2.4.0 doesn't handle
	NULL strings.

2003-09-22  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (glade_DATA): don't link with a11y, it's already in
	libgtkhtml

2003-09-03  Larry Ewing  <lewing@ximian.com>

	* menubar.c: revert the destach changes

2003-09-03  Radek Doulik  <rodo@ximian.com>

	* menubar.c (menubar_set_languages): use control data languge

	* spell.c (spell_set_language): set control data language

	* control-data.c (gtk_html_control_data_new): added language
	property

	* menubar.c (menubar_setup): move spell control checking here from
	activate callback, cache has_spell_control value - it's expensive
	call
	(menubar_setup): call menubar_set_languages

2003-07-23  Federico Mena Quintero  <federico@ximian.com>

	* menubar.c (menubar_setup): Save the signal ID that we connect.
	(menubar_detach): New function, disconnects the appropriate
	signals and removes our menu items.

	* control-data.c (gtk_html_control_data_destroy): Disconnect the
	menubar signal handler if it is present.

	* editor-control-factory.c (activate_cb): In the deactivate case,
	call menubar_detach().  Also, set the sensitivity of the
	EditSpellCheck verb here.
	(set_frame_cb): Don't set up the menubar here, nor the sensitivity
	of the EditSpellCheck verb.

2003-09-05  Antonio Xu  <antonio.xu@sun.com>

	* editor-control-factory.c (load_from_file): use
	g_filename_from_uri to get image file's real path, bug fix
	#47990.

2003-09-03  Dan Winship  <danw@ximian.com>

	* Makefile.am (libgnome_gtkhtml_editor_3_1_la_LDFLAGS): Remove
	-no-undefined (which is wrong), and add -module.

2003-09-02  Larry Ewing  <lewing@ximian.com>

	* GNOME_GtkHTML_Editor-emacs.xml.in: add file with emacs friendly
	keybindings converted by Alain Mellan (see Ximian #41187).

	* menubar.c (menubar_setup): load emacs keybindings if the